# seqan

./: .gitignore
core/apps/splazers/: razers.h  razers_spliced.h
core/include/seqan/: amos_io.h  store.h
core/include/seqan/amos_io/: INFO  amos_io_base.h
core/include/seqan/bam_io/: bam_alignment_record.h  bam_sam_conversion.h  read_bam.h  read_sam.h  write_bam.h  write_sam.h
core/include/seqan/basic/: basic_exception.h  concept_checking.h  fundamental_tags.h
core/include/seqan/file/: string_mmap.h
core/include/seqan/gff_io/: gff_io_base.h
core/include/seqan/misc/: misc_svg.h
core/include/seqan/modifier/: modifier_string.h
core/include/seqan/platform/: platform_gcc.h
core/include/seqan/seq_io/: fasta_fastq.h
core/include/seqan/sequence/: segment_base.h  sequence_interface.h  string_base.h
core/include/seqan/store/: store_io.h
core/include/seqan/stream/: chunking.h  lexical_cast.h  mmap_stream_deprecated.h  stream_base.h  tokenization.h  virtual_stream.h
core/include/seqan/stream/zipstream/: zutil.h
core/tests/gff_io/: test_gff_io.cpp  test_gff_io.h
core/tests/seq_io/: test_stream_write_fasta.h
core/tests/store/: test_store.cpp  test_store_io.h
extras/apps/primer_id_identifyer/: CMakeLists.txt  INFO  ednafull.h  primer_id_identifyer.cpp
extras/apps/seqan_flexbar/: CMakeLists.txt  adapterTrimming.h  adapter_test.cpp  demultiplex.h  demultiplex_test.cpp  generalProcessing.h  generalProcessing_test.cpp  readTrimming.h  seqan_flexbar.cpp  seqan_flexlib.cpp  trimming_test.cpp
extras/include/seqan/: vcf_io.h
extras/include/seqan/bed_io/: read_bed.h  write_bed.h
extras/include/seqan/translation/: translation.h
extras/include/seqan/vcf_io/: read_vcf.h  write_bcf.h
extras/tests/bed_io/: test_bed_io.cpp
extras/tests/vcf_io/: CMakeLists.txt  test_bcf_io.h  test_vcf_io.cpp
sandbox/jsinger/: CMakeLists.txt
sandbox/jsinger/apps/: CMakeLists.txt
sandbox/jsinger/apps/comparePeptideFromNuc/: CMakeLists.txt  INFO  comparePeptideFromNuc.cpp
sandbox/jsinger/apps/create_blastp_benchmark/: CMakeLists.txt  INFO  create_blastp_benchmark.cpp
sandbox/jsinger/apps/determineLowestVirulence/: CMakeLists.txt  INFO  determineLowestVirulence.cpp
sandbox/jsinger/apps/suffix_tree_mapping/: .suffix_tree_mapping.cpp.swp  CMakeLists.txt  INFO  suffix_tree_mapping.cpp
sandbox/jsinger/demos/: CMakeLists.txt
sandbox/jsinger/tests/: CMakeLists.txt
